# aimspy

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
aimspy/: __init__.py  __main__.py  _exceptions.py  _system.py  _version.py  calculator.py  cli.py  data.py  info.py  matrix.py  structure.py
aimspy/_binding/: __init__.py  callback_types.py  ctypes_types.py  libloader.py  prototypes.py
aimspy/_callbacks/: __init__.py  base.py  defaults.py  modifiers.py  registry.py
aimspy/_patches/: __init__.py  _apply.py  aimspy-patch_v0.1.0.diff
aimspy/interface/: __init__.py
aimspy/interface/deeph/: __init__.py  converter.py  data.py
docs/: .readthedocs.yaml  Makefile  api_reference.rst  basic_usage.md  citation_and_license.md  cli.md  conf.py  index.rst  installation_and_setup.md  key_concepts.md  troubleshooting.md
docs/for_developers/: collaboration_guide.md  development_guide.md  index.rst
examples/continue_calc/: control.in  geometry.in  run.py
examples/from_scratch/: run.py
tests/: conftest.py  test_baseline.py  test_capture_overlap.py  test_export_deeph.py  test_regression.py  test_strategies.py  test_warmstart.py
tests/data/MoS2/: control.in  geometry.in
tests/data/MoS2/deeph_out/: POSCAR  info.json
tests/data/MoS2/deeph_warm/: POSCAR  info.json
tests/unit/: __init__.py  conftest.py  test_deeph_data.py  test_force_close.py  test_poscar.py  test_protocol_enum.py  test_structure.py
