[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "aimspy"
version = "0.0.2"
authors = [
    {name = "DeepH team", email = "deeph-pack@outlook.com"},
]
description = "In-memory Python interface to FHI-aims via pybind11, for seamless integration with DeepH/DeepX."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "FHI-aims", "DFT", "ab initio", "pybind11", "deeph", "deepx",
    "materials science", "quantum chemistry",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

requires-python = ">=3.12,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/kYangLi/aimspy"
Documentation = "https://github.com/kYangLi/aimspy#readme"
Repository = "https://github.com/kYangLi/aimspy.git"
Issues = "https://github.com/kYangLi/aimspy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimspy"]
exclude = [
    "aimspy.aims",
    "aimspy.aims.*",
    "aimspy.io",
    "aimspy.io.*",
    "aimspy.patches",
    "aimspy.patches.*",
    "tests*", "binding*", "scripts*", "FHIaims*",
    "docs*", "examples*", ".*", "*.egg-info", "build*",
]
