[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimspy"
version = "0.2.0"
authors = [
    {name = "DeepH team", email = "deeph-pack@outlook.com"},
]
description = "Pure-Python in-memory interface to FHI-aims via ctypes, for seamless integration with DeepX/DeepH."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "FHI-aims", "DFT", "ab initio", "ctypes", "deeph", "deepx",
    "materials science", "quantum chemistry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy>=1.24",
    "h5py>=3.0",
    "mpi4py>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0",
    # Documentation (inherit from docs)
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "myst_nb",
    "sphinx-design",
    "docutils",
]

docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "myst_nb",
    "sphinx-design",
    "docutils",
]

[project.scripts]
aimspy = "aimspy.cli:main"

[project.urls]
Homepage = "https://github.com/kYangLi/aimspy"
Documentation = "https://github.com/kYangLi/aimspy#readme"
Repository = "https://github.com/kYangLi/aimspy.git"
Issues = "https://github.com/kYangLi/aimspy/issues"
Changelog = "https://github.com/kYangLi/aimspy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimspy*"]
exclude = ["tests*", ".*", "*.egg-info", "build*"]

[tool.setuptools.package-data]
aimspy = ["_patches/*.diff"]
"aimspy._patches" = ["*.diff"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
